@@ -1,0 +1,10 @@
+#	$NetBSD: Makefile,v 1.1 2008/09/23 23:59:04 hubertf Exp $
+
+FILES=		c99.sh
+FILESNAME=	c99
+FILESDIR=	/usr/bin
+FILESMODE=	${BINMODE}
+
+MAN=		c99.1
+
+.include <bsd.prog.mk>
